# FJSPLIB

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  solve.py
.github/workflows/: CI.yml
fjsplib/: Instance.py  __init__.py  read.py  write.py
tests/: test_parse.py  test_read.py  test_write.py  utils.py
tests/data/: classic.fjs
