[tool.poetry]
name = "fjsplib"
version = "0.0.1"
description = "Python package to read and write FJSP instances."
authors = ["Leon Lan <leon.lanyidong@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/leonlan/FJSPLIB"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.19.0"
pytest = "^7.1.2"
pytest-cov = ">=2.6.1"


[tool.black]
line-length = 79


[tool.mypy]
ignore_missing_imports = true


[tool.ruff]
line-length = 79

[tool.ruff.lint]
ignore-init-module-imports = true
select = [
    "E", "F", "I", "NPY", "PYI", "Q", "RET", "RSE", "RUF", "SLF", "SIM", "TCH"
]

[tool.ruff.lint.isort]
case-sensitive = true
known-first-party = ["fjsplib", "tests"]


[tool.pytest.ini_options]
addopts = "--cov=. --cov-report=xml --cov-report=term"
testpaths = "tests"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
