[project]
name = "fjsplib"
version = "0.0.2"
description = "A parser for flexible job shop scheduling instances."
authors = [
    { name = "Leon Lan", email = "l.lan@vu.nl"},
]
license = { text = "MIT License" }
readme = "README.md"
keywords = [
    "scheduling",
    "flexible job shop scheduling",
    "fjsp",
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"
dependencies = []


[project.urls]
Repository = "https://github.com/PyJobShop/FJSPLIB"


[dependency-groups]
dev = [
    "numpy>=1.26.0",
    "pre-commit>=3.8.0",
    "pytest>=8.3.2",
]


[build-system]
requires = ["uv_build>=0.8.10,<0.9.0"]
build-backend = "uv_build"


[tool.uv.build-backend]
module-name = "fjsplib"
module-root = ""


[tool.mypy]
ignore_missing_imports = true


[tool.black]
line-length = 79


[tool.ruff]
line-length = 79
extend-include = ["*.ipynb"]


[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
]
ignore = [
    "E741",  # ambiguous variable name, needed for indexing
    "C901",  # too complex
]


[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # ignore unused module imports
